s-frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s-mern-frontend
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      name: s-mern-frontend
      metadata: s-mern-frontend
  template:
    metadata:
      labels:
        name: s-mern-frontend
        metadata: s-mern-frontend
    spec:
      containers:
      - name: s-mern-frontend
        image: indraraspati/s-mern-frontend:1.0
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: s-mern-frontend
  namespace: staging
spec:
  #type: LoadBalancer
  ports:
    - port: 3000
      #nodePort: 30080
  selector:
          name: s-mern-frontend
---
